feat: proxy offer, proxy hotels, proxy offer price
add circle to rectangle transformation in map for derby soft APIs
sort hotels by distance
