# src/controllers/ProxyController.ts
@@ -1,6 +1,7 @@
 import { AuthRequest } from '../types';
 import { NextFunction, Response } from 'express';
 import proxyService from '../services/ProxyService';
+import { defaultRadius } from '../config';
 
 export class ProxyController {
   public async getAllHotels(
@@ -23,10 +24,49 @@ export class ProxyController {
     next: NextFunction
   ) {
     try {
-      const { rectangle } = req.body;
+      const lon = Number(req.query.lon);
+      const lat = Number(req.query.lat);
+      let radius = Number(req.query.radius);
 
-      const hotels = await proxyService.getHotelsByRectangle(rectangle);
-      res.json(hotels);
+      if (!radius) {
+        radius = defaultRadius;
+      }
+
+      const hotels = await proxyService.getHotels(lon, lat, radius);
+      res.json({ data: hotels });
+    } catch (e) {
+      next(e);
+    }
+  }
+
+  public async searchOffers(
+    req: AuthRequest,
+    res: Response,
+    next: NextFunction
+  ) {
+    try {
+      const hotels = await proxyService.getDerbySoftOffers(req.body);
+
+      res.json({
+        data: {
+          derbySoft: hotels,
+          rooms: {
+            data: {},
+            status: 'success'
+          }
+        }
+      });
+    } catch (e) {
+      next(e);
+    }
+  }
+
+  public async offerPrice(req: AuthRequest, res: Response, next: NextFunction) {
+    try {
+      const { offerId } = req.params;
+      const offer = await proxyService.getDerbySoftOfferPrice(offerId);
+
+      res.json(offer);
     } catch (e) {
       next(e);
     }
